	  by the resolver.  If present, the resolver will shuffle the
	  nameserver list each time dns.resolver.query() is called.  Thanks
	  to underrun for the patch.  Note that you don't want to add
	  "options rotate" to your /etc/resolv.conf if your system's
	  resolver library does not understand it.  In this case, just set
	  resolver.rotate = True by hand.

2014-04-11  Bob Halley  <halley@dnspython.org>

	* dns/zone.py: Do not put back an unescaped token.  This was
	  causing escape processing for domain names to break.  Thanks to
	  connormclaud for reporting the problem.

2014-04-04  Bob Halley  <halley@dnspython.org>

	* dns/message.py: Making a response didn't work correctly if the
	  query was signed with TSIG and we knew the key.  Thanks to Jeffrey
	  Stiles for reporting the problem.

2014-01-10  Bob Halley  <halley@ndnspython.org>

	* dns/inet.py (is_multicast): Removed lingering ord()s.

2013-12-11  Bob Halley  <halley@dnspython.org>

	* dns/query.py: Fix problems with the IXFR state machine which caused
	  long diffs to fail.  Thanks to James Raftery for the fix and the
	  repeated prodding to get it applied :)

2013-09-02  Bob Halley  <halley@dnspython.org>

	* (Version 1.11.1 released)

2013-09-01  Bob Halley  <halley@dnspython.org>

	* dns/tsigkeyring.py (to_text): we want keyname.to_text(), not
	  dns.name.to_text(keyname).  Thangs to wangwang for the fix.

2013-08-26  Bob Halley  <halley@dnspython.org>

	* dns/tsig.py (sign): multi-message TSIGs were broken for
	  algorithms other than HMAC-MD5 because we weren't passing the
	  right digest module to the HMAC code.  Thanks to salzmdan for
	  reporting the bug.

2013-08-13  Bob Halley  <halley@dnspython.org>

	* APL RR trailing zero suppression didn't work due to insufficient
	  python 3 porting.

2013-08-09  Bob Halley  <halley@dnspython.org>

	* dns/dnssec.py (_find_candidate_keys): we tried to extract the
	  key from the wrong variable name.  Thanks to Andrei Fokau for the
	  fix.
